Fixed Events on Firefox

--- a/Home/home.css
+++ b/Home/home.css
@@ -345,7 +345,7 @@ html, body {
     top: 90%;
     left: 0px;
     width: 100%;
-    height: 10%;
+    height: 100%;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.35);
     opacity: 0;
@@ -411,12 +411,14 @@ html, body {
     position: relative;
 }
 #upcoming-events .event-wrap .event-hover .event-text-wrap {
+    height: 85%;
     max-height: 85%;
 }
 
 #upcoming-events .event-wrap .event-title {
     position: relative;
     top: 0%;
+    height: 11.76%;
 }
 #upcoming-events .event-wrap .event-title p {
     position: absolute;
